--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,9 +52,159 @@ table {
   font-size: 10px;
 }
 
+@-webkit-keyframes modal-bg {
+  from {
+    height: 0;
+  }
+  to {
+    height: 100vh;
+  }
+}
+
+@keyframes modal-bg {
+  from {
+    height: 0;
+  }
+  to {
+    height: 100vh;
+  }
+}
+
+@-webkit-keyframes modal {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes modal {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.modal {
+  position: absolute;
+  width: 100vw;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-animation-name: modal-bg;
+          animation-name: modal-bg;
+  -webkit-animation-duration: .5s;
+          animation-duration: .5s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  display: none;
+}
+
+.modal .event {
+  width: 120rem;
+  background-color: #fff;
+  border-radius: 1rem;
+  overflow: hidden;
+  padding: 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-animation-name: modal;
+          animation-name: modal;
+  -webkit-animation-duration: .5s;
+          animation-duration: .5s;
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  opacity: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.modal .event .event-name {
+  width: 100%;
+  padding: 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 4rem;
+  line-height: 5rem;
+  font-weight: 400;
+  color: #000;
+  text-align: center;
+}
+
+.modal .event .time-indicator {
+  width: calc((100% - 100px)/6);
+  height: 20rem;
+  border-radius: .3rem;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.modal .event .time-indicator > span {
+  margin-top: 30px;
+}
+
+.modal .event .time-indicator > span.event-time-count {
+  font-size: 7rem;
+  line-height: 8rem;
+  font-weight: 500;
+  color: #000;
+}
+
+.modal .event .time-indicator > span.event-time-name {
+  font-size: 2rem;
+  line-height: 2rem;
+  font-weight: 500;
+  color: #000;
+}
+
 body {
+  background: -webkit-gradient(linear, left top, right top, color-stop(10%, rgba(254, 255, 1, 0.353677)), color-stop(81%, rgba(0, 0, 0, 0.53855)));
+  background: linear-gradient(90deg, rgba(254, 255, 1, 0.353677) 10%, rgba(0, 0, 0, 0.53855) 81%);
   height: 100vh;
   width: 100vw;
+  font-family: 'Roboto', sans-serif;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -106,7 +256,6 @@ body input::placeholder {
 body .date-container {
   width: 100rem;
   min-height: 100px;
-  background-color: yellow;
   padding: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -124,10 +273,11 @@ body .date-container {
 body .date-container .data-row {
   font-size: 1.6rem;
   line-height: 2rem;
-  font-weight: 500;
+  font-weight: 400;
   color: #000;
   width: 47.5rem;
   padding: 1rem;
+  cursor: pointer;
   margin: .5px 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
