--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,6 +156,17 @@ table {
   font-weight: 400;
   color: #000;
   text-align: center;
+  text-transform: capitalize;
+}
+
+.modal .event .event-warning {
+  width: 100%;
+  font-size: 2rem;
+  line-height: 3rem;
+  font-weight: 400;
+  color: red;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .modal .event .time-indicator {
@@ -271,10 +282,13 @@ body .date-container .data-row {
   line-height: 2rem;
   font-weight: 400;
   color: #000;
-  width: 47.5rem;
+  width: 25rem;
+  height: 10rem;
   padding: 1rem;
+  background-image: url("../images/new-year.jpg");
+  background-size: cover;
   cursor: pointer;
-  margin: .5px 0;
+  margin: .5rem 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   background-color: pink;
@@ -290,4 +304,10 @@ body .date-container .data-row {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+body .date-container .data-row > span {
+  background-color: white;
+  padding: 1rem;
+  border-radius: 1rem;
 }
