--- a/assets/scss/components/_modal.scss
+++ b/assets/scss/components/_modal.scss
@@ -31,6 +31,13 @@
             box-sizing: border-box;
             @include font-style (4rem, 5rem, 400, #000);
             text-align: center;
+            text-transform: capitalize;
+        }
+        .event-warning{
+            width: 100%;
+            @include font-style (2rem, 3rem, 400, red);
+            text-align: center;
+            margin-bottom: 20px;
         }
         .time-indicator{
             width: calc((100% - 100px)/6);
