--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,17 @@ table {
   font-size: 10px;
 }
 
+.newYearBg {
+  background-image: url("../../images/new-year.jpg") !important;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  /* Remove scrollbar space */
+  background: transparent;
+  /* Optional: just make scrollbar invisible */
+}
+
 @-webkit-keyframes modal-bg {
   from {
     height: 0;
@@ -210,8 +221,7 @@ table {
 }
 
 body {
-  background: -webkit-gradient(linear, left top, right top, color-stop(10%, rgba(254, 255, 1, 0.353677)), color-stop(81%, rgba(0, 0, 0, 0.53855)));
-  background: linear-gradient(90deg, rgba(254, 255, 1, 0.353677) 10%, rgba(0, 0, 0, 0.53855) 81%);
+  background-color: #FF6FFF;
   height: 100vh;
   width: 100vw;
   font-family: 'Roboto', sans-serif;
@@ -219,51 +229,20 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  padding-top: 30px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-body input, body select {
-  padding: 0 20px;
-  height: 7rem;
-  outline: none;
-  background-color: purple;
-  color: #fff;
-  border: none;
-}
-
-body input::-webkit-input-placeholder, body select::-webkit-input-placeholder {
-  color: rgba(255, 255, 255, 0.7);
-}
-
-body input:-ms-input-placeholder, body select:-ms-input-placeholder {
-  color: rgba(255, 255, 255, 0.7);
-}
-
-body input::-ms-input-placeholder, body select::-ms-input-placeholder {
-  color: rgba(255, 255, 255, 0.7);
-}
-
-body input::placeholder, body select::placeholder {
-  color: rgba(255, 255, 255, 0.7);
-}
-
-body input option, body select option {
-  background-color: #fff;
-  color: #000;
-  padding: 10px 0;
-}
-
-body .date-container {
-  width: 100rem;
-  min-height: 100px;
-  padding: 20px;
+body form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -275,6 +254,63 @@ body .date-container {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  width: 100rem;
+}
+
+body form input, body form select {
+  padding: 0 20px;
+  width: 23%;
+  border-radius: 2rem;
+  height: 7rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  outline: none;
+  background-color: #fff;
+  color: #000;
+  border: none;
+}
+
+body form input::-webkit-input-placeholder, body form select::-webkit-input-placeholder {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+body form input:-ms-input-placeholder, body form select:-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+body form input::-ms-input-placeholder, body form select::-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+body form input::placeholder, body form select::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+body form input option, body form select option {
+  background-color: #fff;
+  color: #000;
+  padding: 10px 0;
+}
+
+body .date-container {
+  max-height: 600px;
+  overflow-y: scroll;
+  width: 100rem;
+  min-height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-top: 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body .date-container .data-row {
@@ -282,17 +318,17 @@ body .date-container .data-row {
   line-height: 2rem;
   font-weight: 400;
   color: #000;
-  width: 25rem;
+  width: 45%;
   height: 10rem;
   padding: 1rem;
   background-image: url("../images/new-year.jpg");
   background-size: cover;
   cursor: pointer;
-  margin: .5rem 0;
+  margin-bottom: 2rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color: pink;
   border-radius: 1rem;
+  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -306,8 +342,32 @@ body .date-container .data-row {
       flex-wrap: wrap;
 }
 
+body .date-container .data-row:hover {
+  -webkit-box-shadow: 0px 10px 0px #fff;
+          box-shadow: 0px 10px 0px #fff;
+  -webkit-transition: .3s box-shadow;
+  transition: .3s box-shadow;
+}
+
+body .date-container .data-row:hover .delete-btn {
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
 body .date-container .data-row > span {
   background-color: white;
   padding: 1rem;
+  text-transform: capitalize;
   border-radius: 1rem;
+}
+
+body .date-container .data-row .delete-btn {
+  background-color: white;
+  padding: 1rem 2rem;
+  text-transform: capitalize;
+  border-radius: 1rem;
+  -webkit-transform: translateY(-70px);
+          transform: translateY(-70px);
 }
