--- a/assets/scss/details/_common.scss
+++ b/assets/scss/details/_common.scss
@@ -1,3 +1,8 @@
-.active-warn{
-    display: flex;
+.newYearBg{
+    background-image: url("../../images/new-year.jpg") !important;
+}
+
+::-webkit-scrollbar {
+    width: 0px;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
 }
