--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,56 +1,85 @@
 @import './details/reset';
 @import './details/mixins';
+@import './details/common';
 @import './details/animations';
 //Components
 @import './components/index';
 body{
-    background: linear-gradient(90deg, rgba(254,255,1,0.3536765047816002) 10%, rgba(0,0,0,0.5385504543614321) 81%);
+    background-color: #FF6FFF;
     height: 100vh;
     width: 100vw;
     font-family: 'Roboto', sans-serif;
     position: relative;
-    @include flex-style (center, center);
+    @include flex-style (flex-start, center);
+    padding-top: 30px;
+    box-sizing: border-box;
     // [class$=input]
-    input, select{
-        padding: 0 20px;
-        height: 7rem;
-        outline: none;
-        background-color: purple;
-        color: #fff;
-        border: none;
-        &::placeholder{
-            color: rgba($color: #fff, $alpha: .7);
-        } 
-        option{
+    form{
+        @include flex-style (flex-start, space-between);
+        width: 100rem;
+        input, select{
+            padding: 0 20px;
+            width: 23%;
+            border-radius: 2rem;
+            height: 7rem;
+            box-sizing: border-box;
+            outline: none;
             background-color: #fff;
             color: #000;
-            padding: 10px 0;
+            border: none;
+            &::placeholder{
+                color: rgba($color: #fff, $alpha: .7);
+            } 
+            option{
+                background-color: #fff;
+                color: #000;
+                padding: 10px 0;
+            }
         }
     }
+    
     .date-container{
+        max-height: 600px;
+        overflow-y: scroll;
         width: 100rem;
         min-height: 100px;
-        // background-color: yellow;
-        padding: 20px;
         @include flex-style (flex-start, space-between);
+        padding-top: 20px;
+        box-sizing: border-box;
         .data-row{
             @include font-style (1.6rem, 2rem, 400, #000);
-            width: 25rem;
+            width: 45%;
             height: 10rem;
             padding: 1rem;
             background-image: url('../images/new-year.jpg');
             background-size: cover;
             cursor: pointer;
-            margin: .5rem 0;
+            margin-bottom: 2rem;
             box-sizing: border-box;
-            background-color: pink;
             border-radius: 1rem;
+            overflow: hidden;
             @include flex-style (center, space-between);
+            &:hover{
+                box-shadow: 0px 10px 0px #fff;
+                transition: .3s box-shadow;
+            }
+            &:hover .delete-btn{
+                transform: translateY(0px);
+                transition: .5s;
+            }
             >span{
                 background-color: white;
                 padding: 1rem;
+                text-transform: capitalize;
                 border-radius: 1rem;
             }        
+            .delete-btn{
+                background-color: white;
+                padding: 1rem 2rem;
+                text-transform: capitalize;
+                border-radius: 1rem;
+                transform: translateY(-70px);
+            }
         }
     }
 }
