--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,10 +52,6 @@ table {
   font-size: 10px;
 }
 
-.newYearBg {
-  background-image: url("../../images/new-year.jpg") !important;
-}
-
 ::-webkit-scrollbar {
   width: 0px;
   /* Remove scrollbar space */
@@ -259,7 +255,7 @@ body form {
 
 body form input, body form select {
   padding: 0 20px;
-  width: 23%;
+  width: 30%;
   border-radius: 2rem;
   height: 7rem;
   -webkit-box-sizing: border-box;
@@ -271,19 +267,19 @@ body form input, body form select {
 }
 
 body form input::-webkit-input-placeholder, body form select::-webkit-input-placeholder {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(141, 141, 141, 0.7);
 }
 
 body form input:-ms-input-placeholder, body form select:-ms-input-placeholder {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(141, 141, 141, 0.7);
 }
 
 body form input::-ms-input-placeholder, body form select::-ms-input-placeholder {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(141, 141, 141, 0.7);
 }
 
 body form input::placeholder, body form select::placeholder {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(141, 141, 141, 0.7);
 }
 
 body form input option, body form select option {
@@ -321,7 +317,7 @@ body .date-container .data-row {
   width: 45%;
   height: 10rem;
   padding: 1rem;
-  background-image: url("../images/new-year.jpg");
+  background-color: #69F7FF;
   background-size: cover;
   cursor: pointer;
   margin-bottom: 2rem;
