--- a/assets/scss/components/_modal.scss
+++ b/assets/scss/components/_modal.scss
@@ -40,6 +40,10 @@
             margin-bottom: 20px;
         }
         .time-indicator{
+            @media screen and (max-width: 50rem) {
+                width: 45%;
+                margin-bottom: 2rem;
+            }
             width: calc((100% - 200px)/5);
             height: 20rem;
             border-radius: .3rem;
